--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 PORT="<PORT number>"
 MONGO_URI=mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
+JWT_SECRET="<JWT SECRET KEY>"
