added maxdoc attribute in response and added additionals to response generator

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 PORT="<PORT number>"
 MONGO_URI=mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
 JWT_SECRET="<JWT SECRET KEY>"
+CorsWebsiteURL="<Wwb URL>"
